[tool.poetry]
name = "clucdd"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.39.3"
ortools = "9.3.10497"
torch = "^2.2.2"
scikit-learn = "^1.4.2"
tensorboard = "^2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"